export enum Routes {
  Onboarding = 'Onboarding',
  Login = 'Login',
  Registration = 'Registration',
  Dashboard = 'Dashboard',
  Details = 'Details',
}

export default Routes;
