appId: org.reactjs.native.example.Laundry
---
- tapOn:
    id: 'LoginEmail'
- inputText: 'karl.revilla@gmail.com'
- tapOn:
    id: 'LoginPassword'
- inputText: 'Test1234'
- tapOn:
    id: 'LoginButton'
- assertVisible:
    id: Dashboard
    index: 1
